<resources>
    <string name="app_name">Apps De Addiction</string>
    <string name="close">close</string>
    <string name="block">Block?</string>
    <string name="from">From</string>
    <string name="dummy_time">21:07</string>
    <string name="to">To</string>
    <string name="dummy_time_2">22:40</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="msg_app_open">You will be able to open this app after</string>
    <string name="app_icon">app icon</string>
    <string name="_05">05</string>
    <string name="_45">45</string>
    <string name="_07">07</string>
    <string name="delete">Delete</string>
    <string name="quote">Time isn\'t the main thing. \n It\'s the only thing.</string>
    <string name="quote_2">Save your time.</string>
</resources>
